wikijs/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: wikijs
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-lets-encrypt
    kubernetes.io/ingress.class: public
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - wiki.prinzba.ch
      secretName: wiki-cert
  rules:
    - host: wiki.prinzba.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs
                port:
                  number: 80
